--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Copyrighted Material (used for testing)
+project_files/Assets/Audio/VeryCopyright
+
+# Build files
+project_files/Build
